--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,5 @@
-<h1>Show Post</h1>
+<h1><%= @post.title %></h1>
+<small><%= @post.created_at.strftime("%b %d. %Y") %></small>
+<p><%= @post.body %></p>
+<%= link_to "Edit Post", edit_post_path %> | <%= link_to "Delete Post", @post, :confirm => "Are you sure?", :method => :delete %>
+
